[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EscenaPausa.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Outrun future.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Neon.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.701961, 0.352941, 0.788235, 1 )
border_blend = true
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0.690196, 0.192157, 0.741176, 0.6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.529412, 0.917647, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.701961, 0.352941, 0.788235, 1 )
border_blend = true
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="EscenaPausa" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPausa" type="Popup" parent="."]
visible = true
margin_left = 288.0
margin_top = 192.0
margin_right = 736.0
margin_bottom = 576.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="ColorRect" type="ColorRect" parent="PopupPausa"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0823529, 0.0823529, 0.882353 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPausa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
margin_bottom = -32.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 40

[node name="Label" type="Label" parent="PopupPausa/VBoxContainer"]
margin_right = 448.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 0
text = "Men√∫ de pausa"
align = 1
valign = 1

[node name="BtContinuar" type="Button" parent="PopupPausa/VBoxContainer"]
margin_left = 124.0
margin_top = 91.0
margin_right = 324.0
margin_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 35 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Continuar"

[node name="BtSalir" type="Button" parent="PopupPausa/VBoxContainer"]
margin_left = 124.0
margin_top = 166.0
margin_right = 324.0
margin_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 35 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Salir de la partida"

